--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,6 +12,8 @@
       <input type="text" id="username" name="username" />
       <label for="password">Password</label>
       <input type="password" name="password" id="password" />
+      <label for="isadmin">Is admin</label>
+      <input type="checkbox" name="isadmin" id="isadmin" />
       <button type="submit">Submit</button>
     </form>
   </body>
