--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Login</h1>
+    <% if(err) { %>
+    <p><%= err %></p>
+    <% } %>
     <form action="/login" method="post">
       <label for="username">Username</label>
       <input type="text" id="username" name="username" />
