--- a/views/createPost.ejs
+++ b/views/createPost.ejs
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/main.css" />
     <title>Create post</title>
   </head>
   <body>
-    <h1>Create post</h1>
+    <header>
+      <h1>Create post</h1>
+    </header>
     <form action="/post" method="post">
       <label for="title">Title</label>
       <input type="text" name="title" id="title" />
