--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,11 +6,11 @@
     <% if(user?.isadmin) {%>
     <span>admin |</span>
     <% } %>
-    <a href="/logout">Logout</a>
+    <a class="btn danger" href="/logout">Logout</a>
     <% } else {%>
-    <a href="/register">Register</a>
+    <a class="btn" href="/register">Register</a>
     <span> | </span>
-    <a href="/login">Login</a>
+    <a class="btn" href="/login">Login</a>
     <% } %>
   </div>
 </header>
